#cmake最低版本需求，不加入此行会受到警告信息
CMAKE_MINIMUM_REQUIRED(VERSION 3.13.0)

#项目名称
PROJECT(NPD2)

#包含一个子目录LOG
ADD_SUBDIRECTORY(NPDLOG)
ADD_SUBDIRECTORY(NPDErrorDeal)

#添加头文件路径
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/NPDLOG)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/NPDErrorDeal)

#把当前目录下所有源代码文件和头文件加入变量DIR_SRCS
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

#生成应用程序 APPLOG
ADD_EXECUTABLE(NPDProject ${DIR_SRCS})

#指明可执行文件需要连接一个名为AES的链接库
TARGET_LINK_LIBRARIES(NPDProject errordeal log)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)