# CMAKE最低版本需求
CMAKE_MINIMUM_REQUIRED(VERSION 3.13.0)

SET(MODERROEDEAL npderrordeal)

PROJECT(${MODERROEDEAL})

# 添加头文件路径
# INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/LibNPDDataBase)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/LibNPDinclude)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/LibNPDinclude)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/LibNPDBase)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/NPDThirdparty/SQLite3)

# 把当前目录下所有源代码文件和头文件加入变量DIR_SRCS
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

# 将该目录中的源文件编译为共享库
ADD_LIBRARY(${MODERROEDEAL} STATIC ${DIR_SRCS})

# 可执行文件链接库这里需要链接database库
# TARGET_LINK_LIBRARIES(${MODERROEDEAL} npddatabase)

# 设置共享库输出路径
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/output/lib)
