# CMAKE最低版本需求,不加入此行会受到警告信息
CMAKE_MINIMUM_REQUIRED(VERSION 3.13.0)

SET(PROGRAM_VER V01R01C01B01)
SET(PROGRAM_NAME NPD2Project)
SET(PROGRAM_SUFFIX .out)

# 设置工程名 (工程名+版本号+后缀)
SET(OUTPUTNAME ${PROGRAM_NAME}${PROGRAM_VER}${PROGRAM_SUFFIX})

# 项目名称
PROJECT(OUTPUTNAME)

# 把当前目录下所有源代码文件和头文件加入变量DIR_SRCS
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

# 生成应用程序
ADD_EXECUTABLE(${OUTPUTNAME} ${DIR_SRCS})

# 添加头文件路径
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/LibNPDNet)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/LibNPDBase)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/NPDinclude)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/LibNPDDataBase)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/LibNPDProtocol)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/LibNPDDevDriver)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/LibNPDErrorDeal)

SET(CMAKE_LIBRARY_PATH ${CMAKE_SOURCE_DIR}/output/lib)

# 可执行文件链接库
TARGET_LINK_LIBRARIES(${OUTPUTNAME}
    "-Wl,--start-group"
    npddatabase
    npddevdriver
    npdnet
    npdprotocol
    npdbase
    npderrordeal
    pthread
    sqlite3
    dl
    "-Wl,--end-group" rt
)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/output)

# 设置只在指定目录下查找库文件
# SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)

# 设置只在指定目录下查找头文件
# SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)